--- a/Shrike.Harmony/Shrike.Harmony.csproj
+++ b/Shrike.Harmony/Shrike.Harmony.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<RootNamespace>Nanoray.Shrike.Harmony</RootNamespace>
 		<TargetFramework>net5.0</TargetFramework>
