--- a/Shrike/Shrike.csproj
+++ b/Shrike/Shrike.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<RootNamespace>Nanoray.Shrike</RootNamespace>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFrameworks>net5.0;net7.0</TargetFrameworks>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<Company>Nanoray</Company>
