--- a/Shrike.Harmony/Shrike.Harmony.csproj
+++ b/Shrike.Harmony/Shrike.Harmony.csproj
@@ -36,7 +36,7 @@
 		</None>
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Lib.Harmony" Version="2.2.2" />
+		<PackageReference Include="Lib.Harmony" Version="2.2.2" PrivateAssets="all" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\Shrike\Shrike.csproj" />
