Direct extensions for ElementMatch<CodeInstruction>; switched to file-scoped namespaces

--- a/Shrike.Harmony/Shrike.Harmony.csproj
+++ b/Shrike.Harmony/Shrike.Harmony.csproj
@@ -1,44 +1,31 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<RootNamespace>Nanoray.Shrike.Harmony</RootNamespace>
+  <PropertyGroup>
+    <RootNamespace>Nanoray.Shrike.Harmony</RootNamespace>
     <TargetFrameworks>net5.0;net7.0</TargetFrameworks>
-		<ImplicitUsings>disable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<Company>Nanoray</Company>
-		<RepositoryType>git</RepositoryType>
-		<RepositoryUrl>https://github.com/Nanoray-pl/Shrike</RepositoryUrl>
-		<PackageProjectUrl>https://github.com/Nanoray-pl/Shrike</PackageProjectUrl>
-		<PackageTags>sequence; matching; match</PackageTags>
-		<Authors>Shockah</Authors>
-		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<Version>2.0.2</Version>
-		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<Description>An additional library for Shrike, for usage with the Harmony method patching library.</Description>
-		<Copyright>Nanoray</Copyright>
-		<PackageLicenseFile>LICENSE</PackageLicenseFile>
-		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-	</PropertyGroup>
-	<PropertyGroup>
-		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-	</PropertyGroup>
-	<ItemGroup>
-		<None Remove="Lib.Harmony" />
-	</ItemGroup>
-	<ItemGroup>
-		<None Include="..\.editorconfig" Link=".editorconfig" />
-		<None Include="..\docs\README.md">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
-		<None Include="..\LICENSE">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="Lib.Harmony" Version="2.2.2" PrivateAssets="all" />
-	</ItemGroup>
-	<ItemGroup>
-	  <ProjectReference Include="..\Shrike\Shrike.csproj" />
-	</ItemGroup>
+    <LangVersion>11</LangVersion>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <Company>Nanoray</Company>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/Nanoray-pl/Shrike</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Nanoray-pl/Shrike</PackageProjectUrl>
+    <PackageTags>sequence; matching; match</PackageTags>
+    <Authors>Shockah</Authors>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Version>2.0.2</Version>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <Description>An additional library for Shrike, for usage with the Harmony method patching library.</Description>
+    <Copyright>Nanoray</Copyright>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+  </PropertyGroup>
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+    <None Include="..\docs\README.md" Pack="True" PackagePath="\" />
+    <None Include="..\LICENSE" Pack="True" PackagePath="\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Lib.Harmony" Version="2.2.2" PrivateAssets="all" />
+    <ProjectReference Include="..\Shrike\Shrike.csproj" />
+  </ItemGroup>
 </Project>
